--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -1,4 +1,9 @@
-$color-principal: red ; 
+// @use 'header'; 
+@use 'colores';
+@use 'fuentes';
+@use 'clases';
+@use 'header';
+ 
 $fuente: 'montserrat',Arial, sans-serif;
 
 * {
@@ -8,7 +13,6 @@ $fuente: 'montserrat',Arial, sans-serif;
 
 
 body {
-    background-color: greenyellow;
     font-family: $fuente;
 }
 
@@ -17,65 +21,9 @@ h1, h2, h3 {
     font-family: $fuente;
 }
 
-.contenido {
-    max-width:1200px;
-	margin:10px auto; 
-    padding:0 14px
-}
-
-.mitadder{
-	padding-left:10px;
-}
-.mitadizq{
-	padding-right:10px;
-}
-.mitadcentro{
-	padding:0 5px
-}
-
-.imgmax{
-	max-width:100%; margin:auto
-}
-.margensupinf{margin:56px auto}
-.margensup{margin-top:56px}
-
-.icored{
-	vertical-align:bottom; width:21px; margin:auto 5px!important
-}
-.redondeado{border-radius: 6px;}
-
-.mitad{width:50%; float:left}
-
-
 @media only screen and (max-width:600px){
 	.contenido{
 		margin:10px 10px
 	}
 }
 
-
-
-@font-face {
-    font-family: 'montserrat';
-    src: url('fuentes/montserrat-regular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('fuentes/montserrat-regular.woff') format('woff');
-    font-weight:400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('fuentes/montserrat-bold.woff2') format('woff2');
-    font-weight: bold;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('fuentes/montserrat-bold.woff') format('woff');
-    font-weight:bold;
-    font-style: normal;
-}
