--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,27 @@
-* {
-  margin: 0;
-  padding: 0;
+@font-face {
+  font-family: "montserrat";
+  src: url("fuentes/montserrat-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
 }
-
-body {
-  background-color: greenyellow;
-  font-family: "montserrat", Arial, sans-serif;
+@font-face {
+  font-family: "montserrat";
+  src: url("fuentes/montserrat-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
-
-h1, h2, h3 {
-  font-family: "montserrat", Arial, sans-serif;
+@font-face {
+  font-family: "montserrat";
+  src: url("fuentes/montserrat-bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
 }
-
+@font-face {
+  font-family: "montserrat";
+  src: url("fuentes/montserrat-bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
 .contenido {
   max-width: 1200px;
   margin: 10px auto;
@@ -58,22 +68,30 @@ h1, h2, h3 {
   float: left;
 }
 
+header {
+  background-color: #b32e27;
+}
+header a {
+  text-decoration: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "montserrat", Arial, sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: "montserrat", Arial, sans-serif;
+}
+
 @media only screen and (max-width: 600px) {
   .contenido {
     margin: 10px 10px;
   }
-}
-@font-face {
-  font-family: "montserrat";
-  src: url("fuentes/montserrat-regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "montserrat";
-  src: url("fuentes/montserrat-regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
 }
 
 /*# sourceMappingURL=estilo.css.map */
