--- a/estilo.css
+++ b/estilo.css
@@ -75,6 +75,25 @@ header a {
   text-decoration: none;
 }
 
+footer {
+  background-color: #f4f4f4;
+  padding: 30px 0;
+}
+footer .mitadizq {
+  padding-right: 20px;
+}
+footer .mitadder {
+  padding-left: 20px;
+}
+footer .mitadder span {
+  background-image: url("assets/icon-prueba.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
