--- a/estilos/_mixin.scss
+++ b/estilos/_mixin.scss
@@ -9,6 +9,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: inline-block;
     width: $ancho;
     height: $alto;
 }
