--- a/estilos/_index.scss
+++ b/estilos/_index.scss
@@ -1,7 +1,30 @@
 @use 'mixin';
+@use 'clases';
 
 #index {
     .img-principal {
-        @include mixin.imagen-fondo('assets/prueba.png');
+        @include mixin.imagen-fondo('assets/prueba.webp');
+        .w3-display-middle {
+            position: relative;
+            padding: 0 15px;
+            width: 440px;
+            max-width: 100%;
+            div {
+                text-align: center;
+                background-color: white;
+                background-color:rgba($color:white,$alpha: 0.5);
+                border-radius: 20px;
+                padding: 30px 0 15px;
+                select {
+                    height: 40px;
+                    padding: 0 10px;
+                    margin: 10px auto 40px;
+                    width: 180px;
+                }
+                button {
+                    font-size: 20px;
+                }
+            }
+        }
     }
 }
