--- a/estilos/_clases.scss
+++ b/estilos/_clases.scss
@@ -1,3 +1,5 @@
+@use 'mixin';
+@use 'colores';
 .contenido {
     max-width:1200px;
 	margin:10px auto; 
@@ -12,6 +14,28 @@
 }
 .mitadcentro{
 	padding:0 5px
+}
+
+.btn {
+	@include mixin.reset();
+	background-color: black;
+	border-radius: 7px;
+	color: white;
+	cursor: pointer;
+	padding: 3px 20px;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	-ms-border-radius: 7px;
+	-o-border-radius: 7px;
+}
+
+.disponible {
+	background-color: colores.$color-disponible;
+}
+
+
+.no-disponible {
+	background-color: colores.$color-no-disponible;
 }
 
 .imgmax{
