agregar colores faltantes del proyecto

--- a/estilos/_colores.scss
+++ b/estilos/_colores.scss
@@ -4,3 +4,5 @@ $color-principal: #b32e27;
 $color-disponible: #3d801e;
 $color-no-disponible: #b32e27;
 $color-footer: #f4f4f4;
+$color-strong: #e93f36;
+$color-texto: #383838;
