cambiar color en index

--- a/estilos/_index.scss
+++ b/estilos/_index.scss
@@ -13,11 +13,11 @@
                 text-align: center;
                 background-color: white;
                 background-color:rgba($color:white,$alpha: 0.5);
+                color: black;
                 border-radius: 20px;
                 padding: 30px 0 15px;
                 select {
                     height: 40px;
-                    padding: 0 10px;
                     margin: 10px auto 40px;
                     width: 180px;
                 }
