--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -7,6 +7,7 @@
 @use 'index';
 @use 'mixin';
 @use 'rentar';
+@use 'inicio';
  
 $fuente: 'montserrat',Arial, sans-serif;
 
@@ -17,6 +18,7 @@ $fuente: 'montserrat',Arial, sans-serif;
 
 body {
     font-family: $fuente;
+    color: colores.$color-texto;
 }
 
 
