--- a/estilos/_clases.scss
+++ b/estilos/_clases.scss
@@ -19,14 +19,52 @@
 .btn {
 	@include mixin.reset();
 	background-color: black;
-	border-radius: 7px;
 	color: white;
 	cursor: pointer;
 	padding: 3px 20px;
+}
+
+.btn, select {
+	border-radius: 7px;
+	-moz-appearance: none;
+ 	-webkit-appearance: none;
+ 	appearance: none;
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
 	-ms-border-radius: 7px;
 	-o-border-radius: 7px;
+}
+
+select {
+	position: relative;
+	padding: 0 10px;
+	@include mixin.imagen-fondo('assets/icono-flecha-abajo.png', 3px, 3px);
+	background-size: 15px;
+	background-position: 93% center;
+}
+
+// .items-wrapper {
+// 	display: grid;
+// 	grid-template-columns: repeat(auto-fill, minmax(min(100%,300px), 1fr));
+// 	gap: 5px;
+// }
+
+.item {
+	background-color: initial;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+
+.item img {
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 10px;
+	width: 200px;
+	max-width: 100%;
+}
+
+.item img, select {
+	box-shadow: rgba($color: colores.$color-texto, $alpha: 0.3) 3px 3px 5px;
 }
 
 .disponible {
